@@ -16,7 +16,6 @@ package io.trino.cli;
 import com.google.common.base.CharMatcher;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
-import com.google.common.io.ByteStreams;
 import io.airlift.units.Duration;
 import io.trino.cli.ClientOptions.OutputFormat;
 import io.trino.cli.ClientOptions.PropertyMapping;
@@ -42,7 +41,6 @@ import java.io.IOException;
 import java.io.PrintStream;
 import java.lang.reflect.Field;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.AbstractMap;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -149,7 +147,7 @@ public class Console
         if (!hasQuery && !isRealTerminal()) {
             try {
                 if (System.in.available() > 0) {
-                    query = new String(ByteStreams.toByteArray(System.in), terminalEncoding()) + ";";
+                    query = new String(System.in.readAllBytes(), terminalEncoding()) + ";";
 
                     if (query.length() > 1) {
                         hasQuery = true;
@@ -457,6 +455,6 @@ public class Console
         if (isNullOrEmpty(path)) {
             return Optional.empty();
         }
-        return Optional.of(Paths.get(path));
+        return Optional.of(Path.of(path));
     }
 }
