@@ -23,6 +23,7 @@ import io.trino.metadata.QualifiedObjectName;
 import io.trino.metastore.Database;
 import io.trino.metastore.HiveMetastore;
 import io.trino.metastore.HiveMetastoreFactory;
+import io.trino.parquet.crypto.DecryptionKeyRetriever;
 import io.trino.plugin.tpcds.TpcdsPlugin;
 import io.trino.plugin.tpch.ColumnNaming;
 import io.trino.plugin.tpch.DecimalTypeMapping;
@@ -37,7 +38,6 @@ import org.intellij.lang.annotations.Language;
 import org.joda.time.DateTimeZone;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -46,6 +46,7 @@ import java.util.function.Function;
 
 import static io.airlift.log.Level.WARN;
 import static io.airlift.units.Duration.nanosSince;
+import static io.trino.plugin.hive.HiveTestUtils.SESSION;
 import static io.trino.plugin.hive.TestingHiveUtils.getConnectorService;
 import static io.trino.plugin.tpch.ColumnNaming.SIMPLIFIED;
 import static io.trino.plugin.tpch.DecimalTypeMapping.DOUBLE;
@@ -100,11 +101,13 @@ public final class HiveQueryRunner
         private List<TpchTable<?>> initialTables = ImmutableList.of();
         private Optional<String> initialSchemasLocationBase = Optional.empty();
         private Optional<Function<DistributedQueryRunner, HiveMetastore>> metastore = Optional.empty();
+        private boolean metastoreImpersonationEnabled;
         private boolean tpcdsCatalogEnabled;
         private boolean tpchBucketedCatalogEnabled;
         private boolean createTpchSchemas = true;
         private ColumnNaming tpchColumnNaming = SIMPLIFIED;
         private DecimalTypeMapping tpchDecimalTypeMapping = DOUBLE;
+        private Optional<DecryptionKeyRetriever> decryptionKeyRetriever = Optional.empty();
 
         protected Builder()
         {
@@ -160,6 +163,13 @@ public final class HiveQueryRunner
         }
 
         @CanIgnoreReturnValue
+        public SELF setMetastoreImpersonationEnabled(boolean metastoreImpersonationEnabled)
+        {
+            this.metastoreImpersonationEnabled = metastoreImpersonationEnabled;
+            return self();
+        }
+
+        @CanIgnoreReturnValue
         public SELF setTpcdsCatalogEnabled(boolean tpcdsCatalogEnabled)
         {
             this.tpcdsCatalogEnabled = tpcdsCatalogEnabled;
@@ -196,6 +206,13 @@ public final class HiveQueryRunner
             return self();
         }
 
+        @CanIgnoreReturnValue
+        public SELF setDecryptionKeyRetriever(DecryptionKeyRetriever decryptionKeyRetriever)
+        {
+            this.decryptionKeyRetriever = Optional.of(requireNonNull(decryptionKeyRetriever, "decryptionKeyRetriever is null"));
+            return self();
+        }
+
         @Override
         public DistributedQueryRunner build()
                 throws Exception
@@ -218,16 +235,12 @@ public final class HiveQueryRunner
                 Optional<HiveMetastore> metastore = this.metastore.map(factory -> factory.apply(queryRunner));
                 Path dataDir = queryRunner.getCoordinator().getBaseDataDir().resolve("hive_data");
 
-                if (metastore.isEmpty() && !hiveProperties.buildOrThrow().containsKey("hive.metastore")) {
-                    hiveProperties.put("hive.metastore", "file");
-                    hiveProperties.put("hive.metastore.catalog.dir", queryRunner.getCoordinator().getBaseDataDir().resolve("hive_data").toString());
-                }
                 if (hiveProperties.buildOrThrow().keySet().stream().noneMatch(key ->
                         key.equals("fs.hadoop.enabled") || key.startsWith("fs.native-"))) {
                     hiveProperties.put("fs.hadoop.enabled", "true");
                 }
 
-                queryRunner.installPlugin(new TestingHivePlugin(dataDir, metastore));
+                queryRunner.installPlugin(new TestingHivePlugin(dataDir, metastore, metastoreImpersonationEnabled, decryptionKeyRetriever));
 
                 Map<String, String> hiveProperties = new HashMap<>();
                 if (!skipTimezoneSetup) {
@@ -271,16 +284,21 @@ public final class HiveQueryRunner
         private void populateData(QueryRunner queryRunner)
         {
             HiveMetastore metastore = getConnectorService(queryRunner, HiveMetastoreFactory.class)
-                    .createMetastore(Optional.empty());
+                    .createMetastore(Optional.of(SESSION.getIdentity()));
             if (metastore.getDatabase(TPCH_SCHEMA).isEmpty()) {
                 metastore.createDatabase(createDatabaseMetastoreObject(TPCH_SCHEMA, initialSchemasLocationBase));
                 copyTpchTables(queryRunner, "tpch", TINY_SCHEMA_NAME, initialTables);
             }
 
-            if (tpchBucketedCatalogEnabled && metastore.getDatabase(TPCH_BUCKETED_SCHEMA).isEmpty()) {
-                metastore.createDatabase(createDatabaseMetastoreObject(TPCH_BUCKETED_SCHEMA, initialSchemasLocationBase));
-                Session session = createBucketedSession(Optional.empty());
-                copyTpchTablesBucketed(queryRunner, "tpch", TINY_SCHEMA_NAME, session, initialTables, tpchColumnNaming);
+            if (tpchBucketedCatalogEnabled) {
+                metastore = ((HiveConnector) queryRunner.getCoordinator().getConnector(HiveQueryRunner.HIVE_BUCKETED_CATALOG))
+                        .getInjector().getInstance(HiveMetastoreFactory.class)
+                        .createMetastore(Optional.of(SESSION.getIdentity()));
+                if (metastore.getDatabase(TPCH_BUCKETED_SCHEMA).isEmpty()) {
+                    metastore.createDatabase(createDatabaseMetastoreObject(TPCH_BUCKETED_SCHEMA, initialSchemasLocationBase));
+                    Session session = createBucketedSession(Optional.empty());
+                    copyTpchTablesBucketed(queryRunner, "tpch", TINY_SCHEMA_NAME, session, initialTables, tpchColumnNaming);
+                }
             }
         }
     }
@@ -370,7 +388,7 @@ public final class HiveQueryRunner
 
     public static final class DefaultHiveQueryRunnerMain
     {
-        public static void main(String[] args)
+        static void main(String[] args)
                 throws Exception
         {
             Optional<Path> baseDataDir = Optional.empty();
@@ -380,7 +398,7 @@ public final class HiveQueryRunner
                     System.exit(1);
                 }
 
-                Path path = Paths.get(args[0]);
+                Path path = Path.of(args[0]);
                 createDirectories(path);
                 baseDataDir = Optional.of(path);
             }
@@ -406,7 +424,7 @@ public final class HiveQueryRunner
     {
         private HiveGlueQueryRunnerMain() {}
 
-        public static void main(String[] args)
+        static void main()
                 throws Exception
         {
             // Requires AWS credentials, which can be provided any way supported by the DefaultProviderChain
